# Demand-Scenario-Generation-for-Inventory-Decisions

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
data/: README.md
docs/: design-decisions.md  full-project-roadmap.md  literature-review.md  project-design-document.md
experiments/: README.md
notebooks/: 01-eda.ipynb  README.md
reports/: README.md
results/: baseline_comparison.csv  calibration_summary.csv  full_comparison.csv  full_comparison_summary.csv  paired_bootstrap.csv  training_log.csv
results/ablations/: ablation_summary.csv  gaussian_decoder.csv  gaussian_decoder_training_log.csv  latent_dim8.csv  latent_dim8_training_log.csv  no_annealing.csv  no_annealing_training_log.csv  unconditioned.csv  unconditioned_training_log.csv
results/full_eval/: cvae_seed0.json  cvae_seed1.json  cvae_seed2.json  empirical_seed1.json  empirical_seed2.json  gaussian_seed1.json  gaussian_seed2.json  negative_binomial_seed1.json  negative_binomial_seed2.json  poisson_seed1.json  poisson_seed2.json
scripts/: aggregate_results.py  download_data.py  evaluate.py  evaluate_baselines.py  evaluate_full.py  plot_results.py  run_ablation.py  smoke_test.py  train.py  train_autoencoder.py  train_cvae.py  train_cvae_nb.py  train_vae.py
src/demand_vae/: __init__.py  config.py  (+1 more)
tests/: conftest.py  test_autoencoder.py  test_baselines.py  test_collapse_handling.py  test_config.py  test_cvae.py  test_data_pipeline.py  test_nb_decoder.py  test_newsvendor.py  test_phase8.py  test_training.py  test_vae.py
(+17 files in other folders)
