[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "demand-vae"
version = "0.1.0"
description = "Conditional VAE demand scenario generation for newsvendor inventory decisions, evaluated on realized decision cost (M5 retail data)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "torch>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "pre-commit>=3.0",
    "matplotlib>=3.7",  # EDA notebook + report figures
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Notebook plotting cells: semicolon chaining and plain zip are idiomatic.
"*.ipynb" = ["E702", "B905"]

[tool.pytest.ini_options]
testpaths = ["tests"]
